@@ -264,6 +264,20 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|test
+operator|.
+name|GenericTestUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|Before
@@ -501,70 +515,6 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
-DECL|method|testDefaultMaxComponentLength ()
-specifier|public
-name|void
-name|testDefaultMaxComponentLength
-parameter_list|()
-block|{
-name|int
-name|maxComponentLength
-init|=
-name|conf
-operator|.
-name|getInt
-argument_list|(
-name|DFSConfigKeys
-operator|.
-name|DFS_NAMENODE_MAX_COMPONENT_LENGTH_KEY
-argument_list|,
-name|DFSConfigKeys
-operator|.
-name|DFS_NAMENODE_MAX_COMPONENT_LENGTH_DEFAULT
-argument_list|)
-decl_stmt|;
-name|assertEquals
-argument_list|(
-literal|0
-argument_list|,
-name|maxComponentLength
-argument_list|)
-expr_stmt|;
-block|}
-annotation|@
-name|Test
-DECL|method|testDefaultMaxDirItems ()
-specifier|public
-name|void
-name|testDefaultMaxDirItems
-parameter_list|()
-block|{
-name|int
-name|maxDirItems
-init|=
-name|conf
-operator|.
-name|getInt
-argument_list|(
-name|DFSConfigKeys
-operator|.
-name|DFS_NAMENODE_MAX_DIRECTORY_ITEMS_KEY
-argument_list|,
-name|DFSConfigKeys
-operator|.
-name|DFS_NAMENODE_MAX_DIRECTORY_ITEMS_DEFAULT
-argument_list|)
-decl_stmt|;
-name|assertEquals
-argument_list|(
-literal|0
-argument_list|,
-name|maxDirItems
-argument_list|)
-expr_stmt|;
-block|}
-annotation|@
-name|Test
 DECL|method|testNoLimits ()
 specifier|public
 name|void
@@ -727,6 +677,95 @@ operator|.
 name|class
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testMaxDirItemsLimits ()
+specifier|public
+name|void
+name|testMaxDirItemsLimits
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_NAMENODE_MAX_DIRECTORY_ITEMS_KEY
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|addChildWithName
+argument_list|(
+literal|"1"
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+name|GenericTestUtils
+operator|.
+name|assertExceptionContains
+argument_list|(
+literal|"Cannot set dfs"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_NAMENODE_MAX_DIRECTORY_ITEMS_KEY
+argument_list|,
+literal|64
+operator|*
+literal|100
+operator|*
+literal|1024
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|addChildWithName
+argument_list|(
+literal|"1"
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+name|GenericTestUtils
+operator|.
+name|assertExceptionContains
+argument_list|(
+literal|"Cannot set dfs"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Test
