@@ -617,6 +617,9 @@ Release 2.4.0 - UNRELEASED
     HDFS-6097. zero-copy reads are incorrectly disabled on file offsets above
     2GB (cmccabe)
 
+    HDFS-6102. Lower the default maximum items per directory to fix PB fsimage
+    loading. (wang)
+
   BREAKDOWN OF HDFS-5698 SUBTASKS AND RELATED JIRAS
 
     HDFS-5717. Save FSImage header in protobuf. (Haohui Mai via jing9)
